2000-07-10  Andreas Jaeger  <aj@suse.de>

	* malloc/Makefile: Run tst-mtrace only with shared libs.

	* stdio-common/Makefile: Run unbputc and tst-printf tests only
	with shared libs.

2000-07-10  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/dl-machine.h (elf_machine_runtime_link_map): Verify
	that gpreg really points to the GOT section of the calling object.
	Scan all PT_LOAD segments of objects for stub_pc, instead of only
	checking a start address of first one.
	Fix typos.
	* sysdeps/mips/mips64/dl-machine.h (elf_machine_runtime_link_map):
	Likewise.

	* sysdeps/mips/dl-machine.h (__dl_runtime_resolve): Fix a typo.

2000-07-10  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/sigaction.c: Fix typo
	(string_alias->strong_alias).

2000-07-08  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurd/fd.h: Include <cthreads.h> instead of <lock-intern.h>.

2000-07-07  Greg McGary  <greg@mcgary.org>

	* sysdeps/unix/make-syscalls.sh: Tolerate syscalls that
	have no names without leading underscores.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/sjis.c (from_ucs4_lat1): Fix mappng of U005C and
	U007E.

	* stdio-common/Makefile (tests): Remove tst-printf here...
	(tests-srcs): ...and add it here.
	(distribute): Add tst-unbputc.sh and tst-printf.sh.
	Add rules to run tst-printf.sh.
	* stdio-common/tst-printf.c: Move code around so that there is really
	no further output where it's stated.
	* stdio-common/tst-printf.sh: New file.

2000-07-07  Mark Kettenis  <kettenis@gnu.org>

	* hurd/vpprintf.c [USE_IN_LIBIO]: Include <libioP.h>.
	(do_write): Renamed from pwrite.
	(vpprintf) [USE_IN_LIBIO]: Adjust for renaming and reshufling of
	`struct _IO_cookie_file'.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mtrace.pl: Exit with exit code 1 if any leak was
	detected.
	* malloc/tst-mtrace.sh: Run mtrace script.

2000-07-07  Greg McGary  <greg@mcgary.org>

	* posix/regex.c (EXTEND_BUFFER): Compute increment once.