@@ -149,5 +149,5 @@ __libc_sigaction (sig, act, oact)
   return result;
 }
 
-strong_alias (__libc_sigaction, __sigaction)
+weak_alias (__libc_sigaction, __sigaction)
 weak_alias (__libc_sigaction, sigaction)
