@@ -148,7 +148,7 @@ __libc_sigaction (int sig, const struct sigaction *act, struct sigaction *oact)
 #endif
 }
 
-strong_alias (__libc_sigaction, __sigaction)
+weak_alias (__libc_sigaction, __sigaction)
 weak_alias (__libc_sigaction, sigaction)
 
 /* NOTE: Please think twice before making any changes to the bits of
