@@ -2,7 +2,7 @@
    Copyright (C) 1997, 1998, 1999, 2000 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Miguel de Icaza (miguel@nuclecu.unam.mx) and
-   		  Jakub Jelinek (jj@ultra.linux.cz).
+		  Jakub Jelinek (jj@ultra.linux.cz).
 
    The GNU C Library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public License as
@@ -64,7 +64,7 @@ __libc_sigaction (int sig, __const struct sigaction *act,
   return ret;
 }
 
-strong_alias (__libc_sigaction, __sigaction);
+weak_alias (__libc_sigaction, __sigaction);
 weak_alias (__libc_sigaction, sigaction);
 
 static void
